# QuakeDB3.0

./: CMakeLists.txt  README.md
core/: Makefile  main  main.c
core/bufforing-stm/: Makefile
core/bufforing-stm/bufforing-stm/: dataBuffor.h  fsmMap.h  mvcc.h
core/bufforing-stm/components-tests/: data_buffor_eviction_and_data_check_on_disk.c
core/bufforing-stm/test_bin/: test_dataBuffor  test_fsmMap
core/bufforing-stm/tests/: test_dataBuffor.c  test_fsmMap.c
core/memory-mgmt/: Makefile
core/memory-mgmt/memory-mgmt/: all_var.c  all_var.h  block8kb.c  block8kb.h  block_header.c  block_header.h  config.h  data_null_bitmap.c  data_null_bitmap.h  file_manager_c.c  file_manager_c.h  log.h  table_header.c  table_header.h  tuple.c  tuple.h  tuple_header.c  tuple_header.h  type_ids.h  types_converter.c  types_converter.h  universal_block.h
core/memory-mgmt/test_bin/: test_all_var  test_block8kb  test_block_header  test_table_header  test_tuple  test_types_converter
core/memory-mgmt/tests/: test_all_var.c  test_block8kb.c  test_block_header.c  test_table_header.c  test_tuple.c  test_types_converter.c  test_universal_block.c
